--- a/locales/kg.json
+++ b/locales/kg.json
@@ -266,7 +266,7 @@
     },
     "addres_details_by_migr_card_arrival": {
         "title": "🏠 Кабыл алган тараптын катталган дарегин көрсөтүңүз (шаар, көчө, үй)",
-        "example": " Пример: Санкт-Петербург, улица Салова, дом 45, лит. А"
+        "example": " Мисал: Санкт-Петербург, улица Салова, дом 45, лит. А"
     },
     "addres_details_kid_migr_card_arrival": {
         "title": "🏠 Баланы РФте каттай турган даректи көрсөтүңүз"
@@ -716,7 +716,7 @@
         },
         "wa_patent_medical_policy_number": {
             "title": "ℹ️ Мыйзамга ылайык, сизде эмгек ишмердүүлүгүңүздүн бүткүл мөөнөтүнө жарактуу ДМС камсыздандыруу полиси болушу керек. Бул маалыматтар ИИМге берилүүчү билдирүүгө кирет.",
-            "description": "✍️ Укажите номер вашего полиса ДМС",
+            "description": "✍️ ДМС полисиңиздин номерин көрсөтүңүз",
             "example": "Мисал: ДМС‑927134 или 2147/МСК‑2025"
         },
         "wa_patent_insurance_company": {
@@ -724,8 +724,8 @@
             "example": "Мисал: РЕСО‑Гарантия, Ингосстрах, Согласие"
         },
         "wa_polis_date": {
-            "title": "📅 Укажите Жарактуулук мөөнөтү полиса ДМС",
-            "description": "Введите даты начала и окончания действия в формате:  с 15.06.2025 по 14.06.2026"
+            "title": "📅 ДМС полисинин жарактуулук мөөнөтүн көрсөтүңүз",
+            "description": "📝 Документтин аталышын жана реквизиттерин киргизиңиз.\n\nМисал: Выписка из ЕГРН от 08.2023"
         },
         "edit_wa_data": {
             "title": "📋 Тастыктоо:",
@@ -845,7 +845,7 @@
         },
         "work_adress": {
             "title": "📍 Иш жериңиздин дарегин көрсөтүңүз",
-            "example_text": " Пример: г. Москва, улица Кантемировская, дом 17"
+            "example_text": " Мисал: г. Москва, улица Кантемировская, дом 17"
         },
         "is_working": {
             "title": "📌 Сиз дагы эле ушул уюмда иштейсизби?",
@@ -932,7 +932,7 @@
     "change_passport_issue_place_btn": "🏢 Ким берген",
     "change_value_live_adress": "🏠 ВРФте жашаган дарегиңизди киргизиңиз\nФормат: шаар, көчө, үй, корпус, квартира",
     "change_value_phone_number": "☎️ Учурдагы телефон номериңизди киргизиңиз\nМисал: 79809008090",
-    "change_value_mvd_adress": "Аризаны тапшыруу үчүн бөлүмдүн толук аталышын киргизиңиз (адатта бул сиздин мурунку каттооңузда же миграциялык документте көрсөтүлөт)\n\nНапример: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга",
+    "change_value_mvd_adress": "Аризаны тапшыруу үчүн бөлүмдүн толук аталышын киргизиңиз (адатта бул сиздин мурунку каттооңузда же миграциялык документте көрсөтүлөт)\n\nМисал: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга",
     "change_value_passport_data": {
         "full_name": "👤 ФИОну кирил арибинде жазыңыз\nМисал: Абдуллаев Жахонгир Нодирович",
         "birth_date": "📆 Туулган күндү DD.MM.YYYY форматында киргизиңиз\nМисал: 14.08.1996",
@@ -1044,7 +1044,7 @@
     "change_value_individual_data": {
         "full_name": "Кабыл алуучу тараптын Фамилия Аты Атасынын атын текст түрүндө жибериңиз",
         "passport_give_date_input": "Паспорттун берилген күнүн текст түрүндө жибериңиз",
-        "passport_issue_place_input": "Паспорт ким тарабынан берилгенин текст түрүндө жибериңиз\nПример: Отделом УФМС России в Санкт-Петербурге",
+        "passport_issue_place_input": "Паспорт ким тарабынан берилгенин текст түрүндө жибериңиз\nМисал: Отделом УФМС России в Санкт-Петербурге",
         "passport_serial_number_input": "Паспорттун сериясын жана номерин текст түрүндө жибериңиз",
         "phone": "☎️ Кабыл алуучу тараптын телефон номерин киргизиңиз (болсо)",
         "adress": "🏠 Кабыл алуучу тараптын катталган дарегин киргизиңиз (шаар, көчө, үй)"
@@ -1054,9 +1054,9 @@
         "who": "Баланы ким коштоп жүргөнүн же арызды ким берерин көрсөтүңүз"
     },
     "change_value_child_cert_info": {
-        "birth_date": "📆 Төрөлгөн күндү ДД.ММ.ГГГГ форматында киргизиңиз\nПример: 14.08.1996",
-        "child_certificate_number": "📇 Төрөлгөндүгү жөнүндө күбөлүктүн номерин киргизиңиз\nПример: №123456",
-        "full_name": "👶 Баланын ФИОсу\nПример: Расулова Махлиё Азизовна",
-        "child_citizenship": "🌍 Жарандыгын киргизиңиз (кириллицада)\nПример: Узбекистан"
+        "birth_date": "📆 Төрөлгөн күндү ДД.ММ.ГГГГ форматында киргизиңиз\nМисал: 14.08.1996",
+        "child_certificate_number": "📇 Төрөлгөндүгү жөнүндө күбөлүктүн номерин киргизиңиз\nМисал: №123456",
+        "full_name": "👶 Баланын ФИОсу\nМисал: Расулова Махлиё Азизовна",
+        "child_citizenship": "🌍 Жарандыгын киргизиңиз (кириллицада)\nМисал: Узбекистан"
     }
 }
