--- a/locales/ru.json
+++ b/locales/ru.json
@@ -369,6 +369,7 @@
         "data_birthday": "🗓 Дата рождения: ",
         "citizenship": "🌍 Гражданство: ",
         "passport": " 📄 Паспорт: ",
+        "expire_period": "📅 Срок пребывания до: ",
         "issue_info": ", выдан ",
         "issue_date": ", срок действия ",
         "issue_migr_card_info": "въезд",
