Убрал конвертацию в pdf до релиза

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -24,6 +24,7 @@
             "hi": "🇮🇳 हिन्दी (Хинди)"
         }
     },
+    "ready_to_download_doc": "✅Готово ниже можете скачать документ",
     "main_menu": {
         "welcome": "👋 Здравствуйте! Я — docBot\nЯ помогу вам быстро и правильно заполнить документы по фото паспорта.\nПросто выбери ниже нужный документ — и через пару минут он будет готов к печати",
         "documents_title": "📋 С какими документами я работаю:",
