Изменение, и добавление реализации pdf output(выдачи и заполнению по шаблону Jinja)

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -210,9 +210,13 @@
         "title": "🎯 Укажите цель въезда в РФ",
         "goals": {
             "goal_one": "Трудовая",
-            "goal_two": "Учёба",
-            "goal_three": "Семейная",
-            "goal_four": "Туризм",
+            "goal_two": "Служебная",
+            "goal_three": "Учёба",
+            "goal_four": "Транзит",
+            "goal_five": "Работа",
+            "goal_six": "Частная",
+            "goal_seven": "Семейная",
+            "goal_eight": "Турзим",
             "other": "Другое"
         }
     },
@@ -234,6 +238,13 @@
         "example": "Например: выписка из ЕГРН, договор аренды, свидетельство на жильё и т.д.",
         "agree_button": "✅ Да, есть",
         "refuse_button": "❌ Нет, такого документа нет"
+    },
+    "place_choose": {
+        "title": "📍 Где вы проживаете?",
+        "example": "Выберите тип помещения:",
+        "button_one": "✅ Жилое помещение",
+        "button_two": "🏢 Иное помещение",
+        "button_three": "🏨 Организация"
     },
     "doc_details_migr_card_arrival": {
         "title": "📝 Введите наименование и реквизиты документа.",
