OCR на паспорта в подтверж. ВНЖ

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -38,6 +38,11 @@
             "stamp_restoration": "📝 Заявление о перестановке штампа ВНЖ"
         }
     },
+    "buttons": {
+        "goto_adress_phone": "✅ Всё верно — перейти к адресу и телефону",
+        "new_edit": "✏️ Изменить",
+        "new_retry": "🖼 Загрузить другое фото"
+        },
     "ocr": {
       "passport": {
         "send_photo": {
