--- a/locales/ru.json
+++ b/locales/ru.json
@@ -129,9 +129,10 @@
         "btn_guardian": "Опекун"
     },
     "stamp_transfer_start_new_passport": {
-        "title": "📝 Теперь введите данные нового паспорта:",
-        "description": "👤 Введите ФИО (только кириллицей)\nПример: Абдуллаев Жахонгир Нодирович"
-    },
+          "title": "📝 Теперь введите данные нового паспорта:",
+          "description": "👤 Введите ФИО (только кириллицей)\nПример: Абдуллаев Жахонгир Нодирович"
+        },
+    "stamp_transfer_passport_new_title": "📝 Теперь введите данные нового паспорта:",
     "live_adress": {
         "title": "🏠 Введите адрес, где вы проживаете в РФ",
         "example": "Формат: город, улица, дом, корпус, квартира"
