--- a/locales/ru.json
+++ b/locales/ru.json
@@ -151,7 +151,7 @@
     "phone_number": {
           "title": "☎️ Введите ваш актуальный номер телефона",
           "example_text": "Пример: 79809008090",
-          "ask": "📞 Введите номер телефона в формате 79XXXXXXXXX."
+          "ask": "☎️ Введите ваш актуальный номер телефона\nПример: 79809008090."
         },
     "change_menu": {
         "title": "🖊 Какое поле хотите изменить?",
@@ -1086,6 +1086,12 @@
     "change_representative_data_dict_btn": "👥 Законный представитель",
     "change_who_btn": "Степень родства",
     "change_child_cert_info_dict_btn": "🧑 Свидетельство о рождении",
+
+
+
+
+
+
     "change_value_individual_data": {
         "full_name": "Отправьте текстом Фамилию Имя Отчество принимающей стороны",
         "passport_give_date_input": "Отправьте текстом дату выдачи паспорта",
