feat: локальные правки (OCR для патента + обновления)

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -10,6 +10,11 @@
         "description": "Вы можете вернуться и дать согласие в любое время.",
         "back_button": "🔄 Вернуться к согласию"
     },
+    "buttons": {
+      "goto_adress_phone": "📍 Адрес / ☎️ Телефон",
+      "new_edit": "✏️ Изменить данные",
+      "new_retry": "📸 Загрузить другое фото"
+    },
     "language": {
         "title": "Пожалуйста, выберите удобный язык обслуживания:",
         "note": "ℹ️ Язык можно будет сменить позже в меню",
@@ -132,7 +137,7 @@
           "title": "📝 Теперь введите данные нового паспорта:",
           "description": "👤 Введите ФИО (только кириллицей)\nПример: Абдуллаев Жахонгир Нодирович"
         },
-    "stamp_transfer_passport_new_title": "📝 Теперь введите данные нового паспорта:",
+        "stamp_transfer_passport_new_title": "📝 Теперь введите данные нового паспорта:",
     "live_adress": {
         "title": "🏠 Введите адрес, где вы проживаете в РФ",
         "example": "Формат: город, улица, дом, корпус, квартира"
@@ -144,9 +149,10 @@
         "back": "↩️ Назад"
     },
     "phone_number": {
-        "title": "☎️ Введите ваш актуальный номер телефона",
-        "example_text": "Пример: 79809008090"
-    },
+          "title": "☎️ Введите ваш актуальный номер телефона",
+          "example_text": "Пример: 79809008090",
+          "ask": "☎️ Введите ваш актуальный номер телефона\nПример: 79809008090."
+        },
     "change_menu": {
         "title": "🖊 Какое поле хотите изменить?",
         "buttons": {
@@ -1053,7 +1059,7 @@
         "inn": "🧾 Укажите ИНН организации (если есть)",
         "name_org": "🏢 Введите наименование организации (полное, на кириллице)\n\nПример: ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ «ФОРМАТ»\n(или сокращённо: ООО «ФОРМАТ»)"
     },
-    
+
     "change_value_marriage_data": {
         "spouse_fio": "👤 Введите ФИО супруга(и) (только кириллицей)\nПример: Кислякова Ирина Ивановна",
         "issue_date": "📆 Введите дату выдачи свидетельства о браке в формате ДД.ММ.ГГГГ\nПример: 14.08.1996",
@@ -1081,6 +1087,11 @@
     "change_who_btn": "Степень родства",
     "change_child_cert_info_dict_btn": "🧑 Свидетельство о рождении",
 
+
+
+
+
+
     "change_value_individual_data": {
         "full_name": "Отправьте текстом Фамилию Имя Отчество принимающей стороны",
         "passport_give_date_input": "Отправьте текстом дату выдачи паспорта",
@@ -1099,5 +1110,4 @@
         "full_name": "👶 ФИО ребёнка\nПример: РАСУЛОВА МАХЛИЁ АЗИЗОВНА",
         "child_citizenship": "🌍 Укажите гражданство (на кириллице)\nПример: Узбекистан"
     }
-   
 }
